refactor: add review changes